src/objects/PPI_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Choice__c</fullName>
        <label>Answer Choice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPI_Name__c</fullName>
        <label>PPI Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPI__c</fullName>
        <label>PPI</label>
        <referenceTo>PPI__c</referenceTo>
        <relationshipLabel>PPI Indicators</relationshipLabel>
        <relationshipName>PPI_Indicators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>PPI Indicators</relationshipLabel>
        <relationshipName>PPI_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Weight</description>
        <inlineHelpText>Weight</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PPI Indicator</label>
    <nameField>
        <displayFormat>PPID-{0000000000}</displayFormat>
        <label>PPI Indicator ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPI Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>